<resources>
    <string name="app_name">Nail-on-line</string>

    <string name="tag_painted_ac">painted_ac</string>
    <string name="tag_painted_mc">painted_mc</string>

    <!-- Errors -->
    <string name="error">Ошибка</string>
    <string name="unexpected_error">Произошла ошибка, попробуйте позже</string>
    <string name="error_select_skill">Сначала выберите услугу</string>
    <string name="error_select_date">Выберите дату</string>
    <string name="error_network_connection_title">Ошибка подключения</string>
    <string name="error_network_connection">Проверьте интернет соединение</string>
    <string name="error_insufficient_bonuses">Не достаточно бонусов для оплаты</string>

    <!-- General menu -->
    <string name="menu_find_master">Найти мастера</string>
    <string name="menu_find_service">Найти по услуге</string>
    <string name="menu_gifts">Подарки</string>
    <string name="menu_profile">Мой профиль</string>

    <!-- Resources for promo -->
    <string name="submit_promo">Записаться по акции</string>

    <!-- MasterTabActivity -->
    <string name="tab_map">Карта</string>
    <string name="tab_list">Список</string>
    <string name="tab_gallery">Галерея</string>
    <string name="appointment_to_master">Записаться к мастеру</string>

    <string name="gifts">Подарки</string>
    <string name="error_activity_not_found">Приложения не найдены</string>
    <string name="master">Мастер</string>
    <string name="service_and_time">Услуга и время</string>

    <!-- NewOrderActivity -->
    <string name="select_skill">Выберите услугу</string>
    <string name="minutes">%1$d&#160;мин</string>
    <string name="roubles">%1$d&#160;руб</string>
    <string name="with_present">&#160;+ подарок</string>
    <string name="for_person">за услугу</string>
    <string name="for_nail">за палец</string>
    <string name="for_hand">за руку</string>
    <string name="select_date_time">Выберите дату и время</string>
    <string name="select_date_title">Дата заказа</string>
    <string name="comment">Комментарии к заказу</string>
    <string name="present_title">Подарок для выбранной услуги</string>
    <string name="order_created_successfully">Заказ успешно создан</string>

    <!-- Register dialog -->
    <string name="register_dialog_title">Для подтверждения заказа укажите данные по которым мастер сможет с Вами связаться</string>
    <string name="name">Имя</string>
    <string name="name_explain">Имя, которое отобразится в заказе</string>
    <string name="phone_hint">Номер телефона</string>
    <string name="phone_explain">Номер для связи с мастером</string>
    <string name="code_dialog_title">На Ваш номер было отправлено сообщение с кодом</string>
    <string name="code_hint">Код из смс</string>
    <string name="code_explain">Введите код из сообщения</string>

    <!-- Order activity -->
    <string name="tab_by_master">По мастеру</string>
    <string name="tab_by_date">По дате</string>

    <!-- Profile activity -->
    <string name="refill">Пополнить</string>
    <string name="bonus_programm">Бонусная программа</string>
    <string name="change_theme">Сменить цветовую тему</string>

    <string name="cancel_order">Отменить запись?</string>
    <string name="back">Назад</string>

    <!-- SelectDistrictActivity -->
    <string name="warning">Внимание</string>
    <string name="confirmation_apply">Вы ходите сохранить изменения?</string>

    <!-- JobListActivity -->
    <string name="pay">Оплатить</string>
    <string name="repeat">Повторить</string>
    <string name="cancel_successed">Запись успешно отменена</string>
    <string name="cancel_error">При отмене записи произошла ошибка</string>
    <string name="dialog_pay_title">Хотите оплатить эту услугу бонусами?</string>
    <string name="dialog_pay_content">(Если Вы расплатились наличными, то попросите мастера выставить статус оплаты вручную)</string>
    <string name="error_unable_to_pay">Оплата не может быть произведена</string>
    <string name="payment_success">Оплата бонусами прошла успешно</string>


    <plurals name="numberOfHands">
        <item quantity="one">%d рука</item>
        <item quantity="other">%d руки</item>
    </plurals>

    <plurals name="numberOfNail">
        <item quantity="one">%d палец</item>
        <item quantity="few">%d пальца</item>
        <item quantity="other">%d пальцев</item>
    </plurals>

    <plurals name="numberOfOrders">
        <item quantity="one">%d запись</item>
        <item quantity="few">%d записи</item>
        <item quantity="other">%d записей</item>
    </plurals>

    <plurals name="numberOfOrdersWithoutDigit">
        <item quantity="one">запись</item>
        <item quantity="few">записи</item>
        <item quantity="other">записей</item>
    </plurals>

    <plurals name="forNumberOfHands">
        <item quantity="one">за %d руку</item>
        <item quantity="other">за %d руки</item>

    </plurals>

    <plurals name="forNumberOfNail">
        <item quantity="one">за %d палец</item>
        <item quantity="few">за %d пальца</item>
        <item quantity="other">за %d пальцев</item>
    </plurals>

    <plurals name="bonus">
        <item quantity="one">%d бонус</item>
        <item quantity="few">%d бонуса</item>
        <item quantity="other">%d бонусов</item>
    </plurals>

</resources>
